--- a/index.html
+++ b/index.html
@@ -313,18 +313,16 @@ const poem = `
 Dag Sint, goed dat u dit leest, ik heb mijn uiterste best gedaan, 
 Om wat te vinden over Huub van Rijn, en het resultaat rijmend te verslaan.
 Mijn conclusies zijn schokkend, ik bereid u vast voor,
-De AIVD is ingelicht, want volgens mij ben ik iets op het spoor.
-
+De AIVD is ingelicht, want ik ben iets op het spoor.
 
 Ik begon op het dark web, dat tegenwoordig trouwens roetveeg-web moet heten,
 Het was een lange zoektocht, maar ik kwam het volgende te weten.
 Huubs digitale afwezigheid heeft alles met zijn werk te maken,
 Hij zit bij de politie, waar hij tegen betaling zijn hersens laat kraken.
-Ik heb zijn locatie gepinpoint, ergens tussen Driebergen en Zeist,
-Thuiswerken kennen ze daar niet, het lijkt alsof Huub er elke werkdag naartoe reist.
+Zijn locatie heb ik gepinpoint op een geheum gebouw, ergens tussen Driebergen en Zeist,
+Thuiswerken kennen ze daar niet, het lijkt alsof die arme Huub elke dag heen en weer reist.
 En wat hij er precies doet, echt, ik heb dit tien keer moeten checken,
 Het is bizar, ze noemen die onzin ETHISCH HACKEN.
-
 
 Hoe ga ik dit uitleggen, Sint, zodat een oude man als u het snapt,
 Het is alsof je om de beveiliging van de Kruidvat te checken, een zak vol snoepjes gapt.
@@ -333,79 +331,68 @@ Het is expres je portemonnee laten vallen om te zien of een ander hem teruggeeft
 Dat is toch cybercrime, hoor ik u denken? Dat is toch hartstikke strafbaar?
 Helemaal mee eens! Maar Huub krijgt ervoor betaald, blijkbaar.
 
-
 Huubs digitale agenda inzien was een fluitje van een cent,
 Daar zag ik dat hij een reisje naar Madeira had gepland.
 Voor het eerst heeft hij er gedoken, onder lichte dwang,
 Hij appte dat hij genoot, maar volgens mij was hij vooral bang.
-
 Toen zag ik iets vreemds: in februari gaat hij weer die kant op, naar een Canarisch Eiland!
-Dat moest een bug in het systeem zijn, dat kon bijna niet waar zijn, want,
+Dat moest een bug in het systeem zijn, dat kon niet waar zijn, want,
 Huub is normaal gesproken niet zo’n vakantieganger,
 Een weekendje hier en daar, maar echt niet langer.
-Dan zie ik nu dat hij twee keer in een halfjaar dezelfde route reist?
+Hoe kan het dan dat hij twee keer in een halfjaar dezelfde route reist?
 Ik wilde Schiphol al bellen, deze bolletjesslikker moest op de zwarte lijst.
-Tot ik een plausibele verklaring zag, hij valt met zijn neus in de boter,
-Mag mee met opa en oma Daanen, met de zusjes en wat kleine koters.
-
+Toch bleek er een plausibele verklaring, hij valt met zijn neus in de boter,
+Mag mee met opa en oma Daanen, de zusjes en hun kleine koters.
 
 Wat een geluksvogel, dacht ik opgelucht, nog geen jaar in de familie en dan al all-inclusive…
-Maar toen stuitte ik plots op een red flag in zijn Google Searches: kattengif!
+Maar toen stuitte ik plots op een red flag in zijn Google Searches: KATTENGIF!
 Huub zoekt naar manieren om een huisdier uit de weg te ruimen, hier is iets niet pluis.
 Hij wil van zijn laatste concurrent op liefdesgebied af: poes Muis.
 Die ligt nog vaker in Farah’s bed dan hijzelf, daar wil Huub blijkbaar wat aan doen,
 Mocht u nog bij Muis langsgaan, Sint, doe een kogelwerend Batmanmasker in zijn schoen.
 
-
-Zo ziet u, Huubs digitale profiel geeft nogal wat reden tot achterdocht,
-Ik gaf hem het voordeel van de twijfel, tot ik hem in de ANWB-database opzocht,
+Zo ziet u, Huubs digitale profiel gaf nogal wat reden tot achterdocht,
+Hij kreeg het voordeel van de twijfel, tot ik hem in de database van de ANWB opzocht,
 Daar zag ik in wat voor patserbak hij naar Mol is gereden,
-Hij had het lef om met zijn Vette Cor het vakantiepark te betreden,
-Het lijkt erop dat Huub de Mol-etiketten niet kent.
-Indruk maken met zo’n rode bolide, dat doe je niet op je eerste weekend.
+Hij had het lef om met zijn Vette Cor het vakantiepark te betreden.
+Het lijkt erop dat Huub de Mol-etiketten niet kent,
+Indruk maken met zo’n rode bolide, dat doe je niet op je eerste weekend!
 Een feut komt gewoon netjes met de Aygo, het liefst in een saaie kleur,
 Maar eerlijk is eerlijk, zijn bolide heeft wel een spacey interieur.
 
-
-Ik ben Huubs geldstromen gaan checken, hoe betaalt hij die slee? Van welk loon?
+Daarna ben ik Huubs geldstromen gaan checken, want hoe betaalt hij die slee? Van welk loon?
 Toen bleek hij toch geen drugsdealer, maar muzikant, een tenor saxofoon.
 Huub speelt wat je maar wilt, van rock tot indie, van soul tot jazz.
 Maar ik ben toch even in die bandnaam gedoken, want what the fuck is een Aeris Brass?
-
 
 Is het een shout-out naar het Duitse Aeris, dat ergonomische stoelen bouwt?
 Of naar STUDIO AERIS, een plek in Utrecht waar je je benen om een paal heen vouwt?
 Ik bleef maar Googlen op die naam, en er zat heel wat verdachts tussen,
 Toen viel eindelijk het kwartje, Aeris is een codewoord voor de Russen.
 
-
-Huubs bekendste nummer is ‘Proper Hired Guns’, dat is toch verdacht?!
+Huubs bekendste nummer is ‘Proper Hired Guns’, dat is toch ook verdacht?!
 Ik klink nu misschien als een complotgekkie, Sint, maar wacht,
 Weet u nog, die drones die laatst bij Eindhoven Airport zijn gespot?
 Nou wil het toeval, een vreemde speling van het lot,
 Dat Huub precies in die week een drone bouwde, dat heeft hij zichzelf zogenaamd geleerd,
 Is het dan zo’n gek idee dat hij voor Moskou spioneert?
 
-
 Als je het doorhebt, zie je dat alles op banden met het Kremlin wijst,
 Dacht hij nou echt weg te komen met zo’n rare verlanglijst?
 Vreemd hè, dat hij een telescoop met superzoom vraagt, die brave knul,
 Daarmee wil hij vast naar de sterren turen, niet naar de militaire bewegingen in Volkel.
 
-
 Maar of Huub nou een geheim agent is of niet, het is hem allemaal vergeven,
 Voor Hackerpiet kan hij geen fout doen, door in de mooiste stad van Nederland te leven.
 Bovendien zie ik hem vaak verliefd naar Kane, Lucy en Puck kijken,
 Het kost hem de grootste moeite om niet aan Farah’s rammelende eierstokken te bezwijken.
-Jij ziet ook wel Sint, die Huub is gewoon een lief jong, een fijne factor in Farah’s leven, 
+U ziet ook wel, Sint, die Huub is gewoon een lief jong, een fijne factor in Farah’s leven, 
 Misschien moeten we hem dat spionnencadeau maar gewoon geven.
 
-
-Mijn laatste oordeel: Huub is gewoon een hartstikke lieve vent,
+Dat is dan ook mijn laatste oordeel: Huub is gewoon een hartstikke lieve vent,
 Wat maakt het uit dat hij wat mannen in Moskou kent.
 Ik hoop hem nog vele jaren in Winssen, Puiflijk, Wijchen of Kampen te zien,
-Met een beetje geluk zit hij voor de volgende dichter wel op TikTok, of Twitter misschien.
-
+Met een beetje geluk voor de volgende dichter zit hij komend jaar wél op TikTok, of Twitter misschien.
 
 Liefs,
 Hackerpiet
@@ -488,3 +475,4 @@ document.addEventListener("click", ()=>{
 
 </body>
 </html>
+
